# phone-number-validator-anakin1181

./: README.md  main.py  pyproject.toml  requirements.txt
phone_number_validator/: validator.py
tests/: test_validator.py
